--- a/app/src/main/res/layout/activity_menu_activities.xml
+++ b/app/src/main/res/layout/activity_menu_activities.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#3fbcef"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
@@ -14,7 +15,15 @@
         android:textColor="@color/white"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"/>
-
+    <TextView
+        android:id="@+id/txtNomeUsuarioMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="nomeUsuario"
+        android:textSize="30dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,7 +50,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Meus Livros"
-        android:id="@+id/btMeus_Livros"
+        android:id="@+id/btMeusLivros"
         android:textSize="30dp"
         android:layout_margin="20px"/>
     <Button
