--- a/app/src/main/res/layout/activity_suporte.xml
+++ b/app/src/main/res/layout/activity_suporte.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Codigo livro" />
+        android:text="Quem somos" />
     <TextView
         android:layout_marginTop="100px"
         android:layout_width="280dp"
