--- a/app/src/main/res/layout/activity_livro_eurobo.xml
+++ b/app/src/main/res/layout/activity_livro_eurobo.xml
@@ -32,14 +32,14 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:text="Um dos maiores clássicos da literatura de ficção científica, Eu, Robô, escrito pelo Bom Doutor, \nIsaac Asimov \nFoi publicado originalmente em 1950"
+        android:text="Um dos maiores clássicos da literatura de ficção científica, Eu, Robô, escrto pelo\nBom Doutor, Isaac Asimov \nFoi publicado originalmente em 1950"
         android:textAlignment="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:textColor="@color/black"
         android:textSize="20dp"/>
     <Button
-        android:id="@+id/btVoltar"
+        android:id="@+id/btReservar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
