--- a/app/src/main/res/layout/itens_exemplares.xml
+++ b/app/src/main/res/layout/itens_exemplares.xml
@@ -7,18 +7,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:textSize="20dp"
         android:text="Exemplar: # "/>
     <TextView
         android:id="@+id/txtIdExemplarExemplares"
-        android:layout_width="120dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textSize="20dp"/>
     <Button
         android:id="@+id/btnPedirExemplar"
-        android:layout_width="110dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Alugado"/>
 
 </LinearLayout>
