--- a/app/src/main/res/layout/activity_pedidos_adm.xml
+++ b/app/src/main/res/layout/activity_pedidos_adm.xml
@@ -13,7 +13,7 @@
         android:text="@string/app_name"/>
 
     <ListView
-        android:id="@+id/listExemplares"
+        android:id="@+id/listPedidos"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:text="Cadastre-se"
