--- a/app/src/main/res/layout/activity_cadastre.xml
+++ b/app/src/main/res/layout/activity_cadastre.xml
@@ -2,109 +2,121 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_gravity="center|center_vertical"
     android:background="#3fbcef"
     android:orientation="vertical">
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="E-Biblio"
-        android:textColor="@color/black"
-        android:textSize="40px"
-        android:layout_marginTop="30dp"/>
+        android:textColor="@color/white"
+        android:textSize="30dp" />
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginLeft="10dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
         android:text="Nome"
-        android:textSize="50px"
-        android:layout_marginTop="40dp"/>
+        android:textColor="@color/white"
+        android:textSize="50px" />
+
     <EditText
         android:id="@+id/txtNome"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:background="@color/white"
+        android:background="@color/ice"
         android:inputType="text"
         android:textColor="@color/black"
         android:textSize="30dp" />
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:textColor="@color/black"
         android:text="E-mail"
-        android:textSize="40px"
-        android:layout_marginTop="10dp"/>
+        android:textColor="@color/white"
+        android:textSize="40px" />
+
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="fill_parent"
         android:layout_height="30dp"
-        android:background="@color/white"
+        android:background="@color/ice"
         android:inputType="text"
         android:textColor="@color/black"
         android:textSize="30dp" />
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:textColor="@color/black"
         android:text="RA"
-        android:textSize="40px"
-        android:layout_marginTop="10dp"/>
+        android:textColor="@color/white"
+        android:textSize="40px" />
+
     <EditText
         android:id="@+id/txtRa"
         android:layout_width="fill_parent"
         android:layout_height="30dp"
-        android:background="@color/white"
+        android:background="@color/ice"
         android:inputType="number"
         android:textColor="@color/black"
         android:textSize="30dp" />
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="30dp"
-        android:gravity="center"
-        android:textColor="@color/black"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="Senha"
-        android:textSize="40px"
-        android:layout_marginTop="10dp"/>
+        android:textColor="@color/white"
+        android:textSize="40px" />
+
     <EditText
         android:id="@+id/txtSenha"
         android:layout_width="fill_parent"
         android:layout_height="30dp"
-        android:background="@color/white"
+        android:background="@color/ice"
         android:inputType="numberPassword"
         android:textColor="@color/black"
-        android:textSize="40px"/>
+        android:textSize="40px" />
 
     <TextView
         android:layout_width="fill_parent"
-        android:textColor="@color/black"
         android:layout_height="30dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="Confirme a Senha"
-        android:textSize="40px"
-        android:layout_marginTop="10dp"/>
+        android:textColor="@color/white"
+        android:textSize="40px" />
+
     <EditText
         android:id="@+id/txtConfSenha"
         android:layout_width="fill_parent"
         android:layout_height="30dp"
-        android:background="@color/white"
+        android:background="@color/ice"
         android:inputType="numberPassword"
         android:textColor="@color/black"
-        android:textSize="80px"/>
+        android:textSize="80px" />
+
     <Button
         android:id="@+id/btCadastrar"
-        android:layout_width="wrap_content"
+        android:layout_width="267dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginVertical="40dp"
         android:background="@color/dark_blue"
         android:text="Cadastrar"
-        android:textColor="@android:color/black"
+        android:textColor="@color/white"
         android:textSize="80px" />
 </LinearLayout>
