--- a/app/src/main/res/layout/activity_escanear.xml
+++ b/app/src/main/res/layout/activity_escanear.xml
@@ -6,14 +6,18 @@
     android:orientation="vertical"
     android:layout_margin="80px">
 
-    <TextView
-        android:textSize="80px"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Codigo livro" />
-
     <!-- filler pra camera:  -->
+    <TextView
+        android:id="@+id/txtFig3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#044476"
+        android:gravity="center"
+        android:text="Escanear"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#fffcd0"
+        android:textSize="80px" />
+
     <ImageView
         android:layout_marginTop="100px"
         android:layout_width="900px"
