--- a/app/src/main/res/layout/activity_livro_um_lugar.xml
+++ b/app/src/main/res/layout/activity_livro_um_lugar.xml
@@ -4,20 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#3fbcef"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
+            android:background="@color/green"
             android:gravity="center"
             android:text="Um lugar bem longe daqui"
             android:textColor="@color/black"
-            android:textSize="30dp"
-            android:background="@color/green"/>
+            android:textSize="30dp" />
+
         <ImageView
             android:id="@+id/imgOdisseia2"
             android:layout_width="200dp"
@@ -25,46 +28,50 @@
             android:layout_marginVertical="50dp"
             android:layout_marginLeft="100dp"
             android:src="@drawable/umlugar" />
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/imgOdisseia"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_toEndOf="@+id/imgOdisseia"
             android:text="Ao mesmo tempo uma ode à natureza, um emocionante romance de formação e uma surpreendente história de mistério, Um lugar bem longe daqui relembra que somos moldados pela criança que fomos um dia e que estamos todos sujeitos à beleza e à violência dos segredos que a natureza guarda.
             Delia Owens"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/white"
-            android:textSize="60px"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:textSize="60px" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="158dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
             <Button
                 android:id="@+id/btReservarUmlugar"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="70dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="10dp"
                 android:background="@color/dark_blue"
                 android:text="Reservar"
-                android:textColor="@android:color/black"
-                android:textSize="80px" />
+                android:textColor="@color/white"
+                android:textSize="80px"
+                app:iconGravity="top" />
+
             <Button
                 android:id="@+id/btVoltarBiblioteca3"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="20dp"
+                android:layout_margin="10dp"
                 android:background="@color/dark_blue"
                 android:text="Voltar"
-                android:textColor="@android:color/black"
-                android:textSize="80px"/>
+                android:textColor="@color/white"
+                android:textSize="80px" />
+
+
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
