--- a/app/src/main/res/layout/activity_menu_activities.xml
+++ b/app/src/main/res/layout/activity_menu_activities.xml
@@ -1,73 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#3fbcef"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="#3fbcef"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/txtFig4"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="30dp"
-        android:textColor="@color/white"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"/>
+        android:background="#044476"
+        android:gravity="center"
+        android:text="E-Biblio"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#fffcd0"
+        android:textSize="80px" />
+
     <TextView
         android:id="@+id/txtNomeUsuarioMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="nomeUsuario"
-        android:textSize="30dp"
-        android:textColor="@color/white"
+        android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center"/>
+        android:text="nomeUsuario"
+        android:textColor="@color/white"
+        android:textSize="30dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="80dp">
+        android:layout_width="317dp"
+        android:layout_height="593dp"
+        android:layout_gravity="center|center_vertical"
+        android:gravity="center|center_horizontal"
+        android:orientation="vertical">
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Biblioteca"
-        android:id="@+id/btBiblioteca"
-        android:textSize="30dp"
-        android:layout_margin="20px"/>
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Escanear"
-        android:id="@+id/btEscanear"
-        android:textSize="30dp"
-        android:layout_margin="20px"/>
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Meus Livros"
-        android:id="@+id/btMeusLivros"
-        android:textSize="30dp"
-        android:layout_margin="20px"/>
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="LogOut"
-        android:id="@+id/btLogOut"
-        android:textSize="30dp"
-        android:layout_margin="20px"/>
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Suporte"
-        android:id="@+id/btSuporte"
-        android:textSize="30dp"
-        android:layout_margin="20px"/>
+        <Button
+            android:id="@+id/btBiblioteca"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20px"
+            android:text="Biblioteca"
+            android:textSize="30dp" />
+
+        <Button
+            android:id="@+id/btEscanear"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20px"
+            android:text="Escanear"
+            android:textSize="30dp" />
+
+        <Button
+            android:id="@+id/btMeusLivros"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20px"
+            android:text="Meus Livros"
+            android:textSize="30dp" />
+
+        <Button
+            android:id="@+id/btLogOut"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20px"
+            android:text="LogOut"
+            android:textSize="30dp" />
+
+        <Button
+            android:id="@+id/btSuporte"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20px"
+            android:text="Suporte"
+            android:textSize="30dp" />
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/logomain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ebiblio" />
 
 
 </LinearLayout>
